# travel_bot

./: .flake8  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test.py
config/: .env.example  logging.conf.yml  settings.py
consumer/: __main__.py  app.py  logger.py  metrics.py  test.py  web_app.py
consumer/api/tech/: health.py  metrics.py
consumer/handlers/: gift.py  item.py  trip.py  user.py
consumer/middlewares/: rps.py
db/: __init__.py  repository.py  rmq_manager.py
db/alembic/: env.py
db/alembic/versions/: ce028c679c99_init_migration.py
db/models/: __init__.py  item.py  meta.py  trip.py  user.py
db/storages/: postgres.py  rabbit.py  redis.py
prometheus/: prometheus_config.yml
schema/: base.py  gift.py  item.py  trip.py  user.py
scripts/: load_fixture.py  manual_migrate.py  migrate.py  startup.sh
src/: app.py  bot.py  logger.py  metrics.py
src/api/tech/: metrics.py
src/api/tg/: webhook.py
src/api/v1/: router.py
src/api/v1/routes/: __init__.py  item.py  router.py
src/crud/: item.py
src/handlers/: __init__.py  commands.py  gift.py  menu.py  router.py  test.py
src/handlers/items/: __init__.py  create_item.py  items.py  watch_items.py
src/handlers/trips/: __init__.py  create_trip.py  menu_trip.py  trips.py  watch_trips.py
src/handlers/utils/: queue.py  select_items_for_trip.py  utils.py  validator.py  watching.py
src/keyboards/: items_kb.py  menu_kb.py  set_menu.py  trips_kb.py
src/lexicon/: lexicon_ru.py
src/middlewares/: __logging.py  auth.py  rps.py
src/states/: auth.py  item.py  trip.py
tests/: conftest.py
tests/common/: conftest.py
tests/common/consumer/test_handle_items/: test_handle_items.py
tests/common/consumer/test_handle_items/seeds/: public.item.json  public.user.json
tests/mocking/: rabbit.py  redis.py  tg.py
